--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -22,7 +22,7 @@ This investigation was motivated by a particular instance of a fundamental quest
 Namely, should the model be augmented to capture a feature we have prior belief exists?
 The results are presented in @howes2023beyond.
 
-Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders) and supported by the R package [`arealutils`](https://athowes.github.io/arealutils).
+Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders).
 
 ## Background
 
