--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -37,7 +37,7 @@ This work was conducted in collaboration with colleagues from the MRC Centre for
 My primary role was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
 The results are presented in @howes2023spatio.
 Kathryn has also created a spreadsheet tool using the estimates which is now being used by countries to guide policy.
-Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils) [@multiutils].
+Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw).
 
 ## Background
 
