--- a/references.bib
+++ b/references.bib
@@ -1107,3 +1107,26 @@ URL= {https://www.r-inla.org/faq},
   year={2022},
   publisher={Taylor \& Francis}
 }
+
+@article{ord2013moral,
+  title={The moral imperative toward cost-effectiveness in global health},
+  author={Ord, Toby},
+  journal={Center for Global Development},
+  volume={12},
+  year={2013}
+}
+
+@article{laplace1774memoire,
+  author={Laplace, P. S.},
+  title={Memoire sur la probabilite de causes par les evenements},
+  journal={Memoire de l'Academie Royale des Sciences},
+  year={1774},
+}
+
+@techreport{world2016framework,
+  title={A framework for voluntary medical male circumcision: effective HIV prevention and a gateway to improved adolescent boys'\& men's health in Eastern and Southern Africa by 2021},
+  author={World Health Organization and others},
+  year={2016},
+  institution={World Health Organization}
+}
+
